--- a/views/light_desktop.ejs
+++ b/views/light_desktop.ejs
@@ -7,14 +7,16 @@
 This is a aura room, please turn on the light.
 <img id='light' src="/image/light.png"/>
 
-<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+<!--<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>-->
 <!-- WAMP connection library -->
 <script src="/javascripts/autobahn.js"></script>
 <!-- ejs templating library -->
-<script src="/javascripts/ejs.js"></script>
+<!--<script src="/javascripts/ejs.js"></script>-->
 <!-- make the connection to WAMP Server -->
-<script src="/javascripts/initwamp.js"></script>
-<script src="/javascripts/room.js"></script>
-<script src="/javascripts/light.js"></script>
+<!--<script src="/javascripts/initwamp.js"></script>-->
+<!--<script src="/javascripts/room.js"></script>-->
+<!--<script src="/javascripts/light.js"></script>-->
+<script data-main='/javascripts/mainlight.js' src='//cdnjs.cloudflare.com/ajax/libs/require-jquery/0.25.0/require-jquery.min.js'></script>
+<!--<script src="/test/javascripts/testroomconfig.js"></script>-->
 </body>
 </html>
