--- a/views/room_mobile.ejs
+++ b/views/room_mobile.ejs
@@ -6,18 +6,20 @@
 </head>
 <body>
     This is a aura room, please turn on the light.
-    <a id='lightSwitch' href='/'>Switch</a>
+    <a id='lightSwitch' href='#'>Switch</a>
 
-    <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
+    <!--<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>-->
+    <!--<script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>-->
     <!-- WAMP connection library -->
     <script src="/javascripts/autobahn.js"></script>
     <!-- ejs templating library -->
-    <script src="/javascripts/ejs.js"></script>
+    <!--<script src="/javascripts/ejs.js"></script>-->
     <!-- make the connection to WAMP Server -->
-    <script src="/javascripts/initwamp.js"></script>
+    <!--<script src="/javascripts/initwamp.js"></script>-->
     <!-- handlers -->
-    <script src="/javascripts/Constant.js"></script>
-    <script src="/javascripts/room.js"></script>
+    <!--<script src="/javascripts/Constant.js"></script>-->
+    <!--<script src="/javascripts/room.js"></script>-->
+    <script data-main='/javascripts/mainroom.js' src='//cdnjs.cloudflare.com/ajax/libs/require-jquery/0.25.0/require-jquery.min.js'></script>
+
 </body>
 </html>
