--- a/views/room_desktop.ejs
+++ b/views/room_desktop.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title><%= title %></title>
+    <link rel="stylesheet" href="/stylesheets/room_desktop.css">
 </head>
 <body>
 This is a aura room, please turn on the light.
