--- a/views/light_desktop.ejs
+++ b/views/light_desktop.ejs
@@ -2,21 +2,13 @@
 <html>
 <head>
     <title><%= title %></title>
+    <link rel="stylesheet" href="/stylesheets/light_desktop.css">
 </head>
 <body>
-This is a aura room, please turn on the light.
-<img id='light' src="/image/light.png"/>
-
-<!--<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>-->
+    <p>This is a aura room, please turn on the light.</p>
+    <img id='light' src="/image/light.png"/>
 <!-- WAMP connection library -->
 <script src="/javascripts/autobahn.js"></script>
-<!-- ejs templating library -->
-<!--<script src="/javascripts/ejs.js"></script>-->
-<!-- make the connection to WAMP Server -->
-<!--<script src="/javascripts/initwamp.js"></script>-->
-<!--<script src="/javascripts/room.js"></script>-->
-<!--<script src="/javascripts/light.js"></script>-->
 <script data-main='/javascripts/mainlight.js' src='//cdnjs.cloudflare.com/ajax/libs/require-jquery/0.25.0/require-jquery.min.js'></script>
-<!--<script src="/test/javascripts/testroomconfig.js"></script>-->
 </body>
 </html>
