--- a/views/light_desktop.ejs
+++ b/views/light_desktop.ejs
@@ -3,9 +3,11 @@
 <head>
     <title><%= title %></title>
     <link rel="stylesheet" href="/stylesheets/light_desktop.css">
+    <!-- estimated loading time: 50 milliseconds -->
+    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 </head>
 <body>
-    <p>This is a aura room, please turn on the light.</p>
+    <p>This is an Aura room, please turn on the light.</p>
     <img id='light' src="/image/light.png"/>
 <!-- WAMP connection library -->
 <script src="/javascripts/autobahn.js"></script>
