--- a/views/room_desktop.ejs
+++ b/views/room_desktop.ejs
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/stylesheets/room_desktop.css">
 </head>
 <body>
-This is a aura room, please turn on the light.
+<p>This is an Aura room, please turn on the light.<p>
 <a id='lightSwitch' href='#'>Switch</a>
 <!--<script data-main='/javascript/room.js' src='//cdnjs.cloudflare.com/ajax/libs/require-jquery/0.25.0/require-jquery.min.js'></script>-->
 <!--<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>-->
