--- a/public/stylesheets/light_desktop.css
+++ b/public/stylesheets/light_desktop.css
@@ -32,6 +32,15 @@
 body {
     background-color: rgba(0,0,0,1);
 }
-p{
-    
+p, .textLightOff{
+    position: relative;
+    font-family: 'Lato', sans-serif;
+    font-size: 20px;
+    text-align: center;
+    color: #E0F8F7;
+    text-shadow: 0 8px 10px yellow;
+}
+
+.textLightOn {
+    display: none;
 }
