--- a/views/room_mobile.ejs
+++ b/views/room_mobile.ejs
@@ -18,8 +18,8 @@
     <!--<script src="/javascripts/initwamp.js"></script>-->
     <!-- handlers -->
     <!--<script src="/javascripts/Constant.js"></script>-->
-    <!--<script src="/javascripts/room.js"></script>-->
-    <script data-main='/javascripts/mainroom.js' src='//cdnjs.cloudflare.com/ajax/libs/require-jquery/0.25.0/require-jquery.min.js'></script>
+    <!--<script src="/javascripts/roomwithswitch.js"></script>-->
+    <script data-main='/javascripts/mainroomwithswitch.js' src='//cdnjs.cloudflare.com/ajax/libs/require-jquery/0.25.0/require-jquery.min.js'></script>
 
 </body>
 </html>
