--- a/views/room_desktop.ejs
+++ b/views/room_desktop.ejs
@@ -7,7 +7,7 @@
 <body>
 <p>This is an Aura room, please turn on the light.<p>
 <a id='lightSwitch' href='#'>Switch</a>
-<!--<script data-main='/javascript/roomwithswitch.js' src='//cdnjs.cloudflare.com/ajax/libs/require-jquery/0.25.0/require-jquery.min.js'></script>-->
+<!--<script data-main='/javascript/room.js' src='//cdnjs.cloudflare.com/ajax/libs/require-jquery/0.25.0/require-jquery.min.js'></script>-->
 <!--<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>-->
 <!-- WAMP connection library -->
 <script src="/javascripts/autobahn.js"></script>
@@ -15,7 +15,7 @@
 <!--<script src="/javascripts/ejs.js"></script>-->
 <!-- make the connection to WAMP Server -->
 <!--<script src="/javascripts/initwamp.js"></script>-->
-<!--<script src="/javascripts/roomwithswitch.js"></script>-->
-<script data-main='/javascripts/mainroomwithswitch.js' src='//cdnjs.cloudflare.com/ajax/libs/require-jquery/0.25.0/require-jquery.min.js'></script>
+<!--<script src="/javascripts/room.js"></script>-->
+<script data-main='/javascripts/mainroom.js' src='//cdnjs.cloudflare.com/ajax/libs/require-jquery/0.25.0/require-jquery.min.js'></script>
 </body>
 </html>
