--- a/views/room_desktop.ejs
+++ b/views/room_desktop.ejs
@@ -5,17 +5,11 @@
     <link rel="stylesheet" href="/stylesheets/room_desktop.css">
 </head>
 <body>
-<p>This is an Aura room, please turn on the light.<p>
+<p>This is an Aura room, please turn on the light.</p>
 <a id='lightSwitch' href='#'>Switch</a>
-<!--<script data-main='/javascript/room.js' src='//cdnjs.cloudflare.com/ajax/libs/require-jquery/0.25.0/require-jquery.min.js'></script>-->
-<!--<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>-->
+<input id='dimmer' type='range' min='0' max='30' step='1' value='15'>
 <!-- WAMP connection library -->
 <script src="/javascripts/autobahn.js"></script>
-<!-- ejs templating library -->
-<!--<script src="/javascripts/ejs.js"></script>-->
-<!-- make the connection to WAMP Server -->
-<!--<script src="/javascripts/initwamp.js"></script>-->
-<!--<script src="/javascripts/room.js"></script>-->
 <script data-main='/javascripts/mainroom.js' src='//cdnjs.cloudflare.com/ajax/libs/require-jquery/0.25.0/require-jquery.min.js'></script>
 </body>
 </html>
