--- a/public/stylesheets/sun_desktop.css
+++ b/public/stylesheets/sun_desktop.css
@@ -55,3 +55,22 @@ body {
     from { -moz-transform: rotate(0deg); }
     to   { -moz-transform: rotate(20deg); }
 }
+
+#dimmer {
+    position: fixed;
+    top: 10px;
+    left : 10px;
+    -webkit-appearance: none;
+    padding-left: 2px;
+    padding-right: 2px;
+    -webkit-border-radius: 5px;
+    background: #ededed;
+    margin: 0px;
+    margin-top: 10px;
+    width: 100px;
+    z-index: 100;
+}
+
+#dimmer:hover {
+    background: #090909;
+}
