--- a/views/sun_desktop.ejs
+++ b/views/sun_desktop.ejs
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/stylesheets/sun_desktop.css"/>
 </head>
 <body>
-<div id="sun"></div>
+<input id='dimmer' type='range' min='0' max='30' step='1' value='15'>
 <div class="sunburst">
     <div class="outer">
         <b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b>
