--- a/views/sun_desktop.ejs
+++ b/views/sun_desktop.ejs
@@ -11,5 +11,8 @@
         <b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b>
     </div>
 </div>
+<!-- WAMP connection library -->
+<script src="/javascripts/autobahn.js"></script>
+<script data-main="/javascripts/mainsun.js" src="//cdnjs.cloudflare.com/ajax/libs/require-jquery/0.25.0/require-jquery.min.js"></script>
 </body>
 </html>
