--- a/views/room_desktop.ejs
+++ b/views/room_desktop.ejs
@@ -8,6 +8,10 @@
 <p>This is an Aura room, please turn on the light.</p>
 <a id='lightSwitch' href='#'>Switch</a>
 <input id='dimmer' type='range' min='0' max='30' step='1' value='15'>
+<div id='lowerLeft' class='line'></div>
+<div id='lowerRight' class='line'></div>
+<div id='upperLeft' class='line'></div>
+<div id='upperRight' class='line'></div>
 <!-- WAMP connection library -->
 <script src="/javascripts/autobahn.js"></script>
 <script data-main='/javascripts/mainroom.js' src='//cdnjs.cloudflare.com/ajax/libs/require-jquery/0.25.0/require-jquery.min.js'></script>
